# glfw

./: .gitignore  CMakeLists.txt  NEA  compile.sh  fuckass  makefile  readme.md  run.sh
include/: shader.hpp
shaders/: vertex_shaders.glsl
src/: main.cpp  shader.cpp
